# siktacka

./: CMakeLists.txt  Makefile  README.md
client/: Client.cpp  Client.hpp  main.cpp
common/: HostAddress.cpp  HostAddress.hpp  RandomNumberGenerator.cpp  RandomNumberGenerator.hpp  Socket.cpp  Socket.hpp  UdpSocket.cpp  UdpSocket.hpp  utils.cpp  utils.hpp  utils_impl.hpp
common/network/: HostAddress.cpp  HostAddress.hpp  Socket.cpp  Socket.hpp  TcpSocket.cpp  TcpSocket.hpp  UdpSocket.cpp  UdpSocket.hpp
common/protocol/: GameEvent.cpp  GameEvent.hpp  HeartBeat.cpp  HeartBeat.hpp  MultipleGameEvent.cpp  MultipleGameEvent.hpp  utils.cpp  utils.hpp
server/: Server.cpp  Server.hpp  main.cpp
